--- a/reviews.html
+++ b/reviews.html
@@ -13,7 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th><th>Status</th></thead>
-<tr><td>2017-07-17</td><td>chromium</td><td><a href='https://codereview.chromium.org/2857583007'>[RLS] Add ScrollableArea if its scrollable.</a></td><td><a href='https://codereview.chromium.org/user/MuVen'>sataya.m</a></td><td>committer</td></tr>
+<tr><td>2017-07-18</td><td>chromium</td><td><a href='https://codereview.chromium.org/2925783002'>[XMLHttpRequest] Filter forbidden response headers.</a></td><td><a href='https://codereview.chromium.org/user/Raveendra Karu'>r.karu</a></td><td>newbie</td></tr>
+<tr><td>2017-07-18</td><td>chromium</td><td><a href='https://codereview.chromium.org/2857583007'>[RLS] Don't add to ScrollableAreaSet if the size is zero</a></td><td><a href='https://codereview.chromium.org/user/MuVen'>sataya.m</a></td><td>committer</td></tr>
 <tr><td>2017-07-14</td><td>chromium</td><td><a href='https://codereview.chromium.org/2979533002'>[Android] Relanding Smart GO NEXT feature in Android Chrome 2/2</a></td><td><a href='https://codereview.chromium.org/user/AKVT'>ajith.v</a></td><td>committer</td></tr>
 <tr><td>2017-07-11</td><td>chromium</td><td><a href='https://codereview.chromium.org/2967893002'>Display arrow cursor instead of i-beam when selection is not present</a></td><td><a href='https://codereview.chromium.org/user/tanvir'>tanvir.rizvi</a></td><td>author</td></tr>
 <tr><td>2017-07-09</td><td>chromium</td><td><a href='https://codereview.chromium.org/2970623002'>[WIP] Compute the linkMatchType inside the CSSSelectorParser.</a></td><td><a href='https://codereview.chromium.org/user/Hwanseung Lee'>hs1217.lee</a></td><td>author</td></tr>
@@ -26,7 +27,6 @@
 <tr><td>2017-06-21</td><td>chromium</td><td><a href='https://codereview.chromium.org/2940013004'>Get rid of EditCommand::IsRenderedCharacter</a></td><td><a href='https://codereview.chromium.org/user/tanvir'>tanvir.rizvi</a></td><td>author</td></tr>
 <tr><td>2017-06-16</td><td>chromium</td><td><a href='https://codereview.chromium.org/2893883002'>Update MaxColSpan to 1000.</a></td><td><a href='https://codereview.chromium.org/user/Shanmuga Pandi'>shanmuga.m</a></td><td>author</td></tr>
 <tr><td>2017-06-12</td><td>chromium</td><td><a href='https://codereview.chromium.org/2939433003'>any</a></td><td><a href='https://codereview.chromium.org/user/zino'>jinho.bang</a></td><td>committer</td></tr>
-<tr><td>2017-06-12</td><td>chromium</td><td><a href='https://codereview.chromium.org/2925783002'>[XMLHttpRequest] Filter forbidden response headers.</a></td><td><a href='https://codereview.chromium.org/user/Raveendra Karu'>r.karu</a></td><td>newbie</td></tr>
 <tr><td>2017-06-08</td><td>chromium</td><td><a href='https://codereview.chromium.org/2909473002'>Moved DummyFrameOwner class to WeblocalFrameimpl.cpp</a></td><td><a href='https://codereview.chromium.org/user/Uzair'>uzair.jaleel</a></td><td>newbie</td></tr>
 <tr><td>2017-06-08</td><td>chromium</td><td><a href='https://codereview.chromium.org/2923933004'>[NotForReview] Move GJDAH and GJDA to media/gpu/mojo</a></td><td><a href='https://codereview.chromium.org/user/Chandan'>c.padhi</a></td><td>newbie</td></tr>
 <tr><td>2017-06-08</td><td>chromium</td><td><a href='https://codereview.chromium.org/2924573002'>[NotForReview] Convert accelerated JPEG Decoder IPC to Mojo</a></td><td><a href='https://codereview.chromium.org/user/Chandan'>c.padhi</a></td><td>newbie</td></tr>
