--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-07-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/576234'>Implements CSSPropertyAPI for -webkit-locale/-webkit-hyphenate-character</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-07-18</td><td>chromium</td><td><a href='https://codereview.chromium.org/2857583007'>[RLS] Don't add to ScrollableAreaSet if the size is zero</a></td><td>sataya.m</td></tr>
 <tr><td>2017-07-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/571345'>PaymentHandler: Add Interfaces for AbortPaymentEvent.</a></td><td>Jinho Bang</td></tr>
 <tr><td>2017-07-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/572675'>PaymentRequest: updateWith() should take PaymentDetailsUpdate promise.</a></td><td>Jinho Bang</td></tr>
