--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-07-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/575306'>Migrate MediaStream IPC messages to Mojo - part 2</a></td><td>Chandan Padhi</td></tr>
+<tr><td>2017-07-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/572605'>PaymentHandler: Implement AbortPaymentEvent in blink side.</a></td><td>Jinho Bang</td></tr>
 <tr><td>2017-07-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/579227'>Setting textArea.defaultValue should wipe out any children.</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-07-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/571210'>Fixing text selection handles getting appeared before finger release</a></td><td>AJITH KUMAR V</td></tr>
 <tr><td>2017-07-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/582668'>PaymentHandler: Make InvokePaymentAppCallback to base::OnceCallback.</a></td><td>Jinho Bang</td></tr>
