--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-07-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/587513'>Check nullptr before using in FireWinAccessibilityEvent</a></td><td>DongJun Kim</td></tr>
+<tr><td>2017-07-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/581250'>Implements CSSPropertyAPI for -webkit-filter/filter/background-filter</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-07-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/586353'>Change the wrong condition in UpdateFavicon</a></td><td>deejay</td></tr>
 <tr><td>2017-07-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/579318'>Migrate MediaStream IPC messages to Mojo - part 3</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-07-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/581932'>Implements CSSPropertyAPI for various SVG properties</a></td><td>Rob Buis</td></tr>
