--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-07-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/591867'>Remove CSSContainment runtime flag (status=stable)</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-07-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/589467'>//media/renderers should depend on //media/base.</a></td><td>Suchit Agrawal</td></tr>
 <tr><td>2017-07-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/587513'>Check nullptr before using in FireWinAccessibilityEvent</a></td><td>DongJun Kim</td></tr>
 <tr><td>2017-07-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/581250'>Implements CSSPropertyAPI for -webkit-filter/filter/background-filter</a></td><td>Rob Buis</td></tr>
