--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-07-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/578831'>[RLS] Implement GetTickmarks for RootLayerScrolling</a></td><td>Sriram</td></tr>
 <tr><td>2017-07-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/590342'>Remove WeakPtrFactory from PepperFileSystemHost</a></td><td>Uzair Jaleel</td></tr>
 <tr><td>2017-07-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/591867'>Remove CSSContainment runtime flag (status=stable)</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-07-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/589467'>//media/renderers should depend on //media/base.</a></td><td>Suchit Agrawal</td></tr>
