--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-07-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/589092'>Use FrameSelection::IsDirectional() in TextControlElement</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-07-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/554424'>Refactor components_unittest build and deps</a></td><td>Ravi Nanjundappa</td></tr>
 <tr><td>2017-07-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/578831'>[RLS] Implement GetTickmarks for RootLayerScrolling</a></td><td>Sriram</td></tr>
 <tr><td>2017-07-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/590342'>Remove WeakPtrFactory from PepperFileSystemHost</a></td><td>Uzair Jaleel</td></tr>
