--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-08-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/594607'>PaymentHandler: Refactor PaymentAppProviderImpl and InvocationCallback.</a></td><td>Jinho Bang</td></tr>
 <tr><td>2017-08-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/590871'>Replace SupportsWeakPtr with WeakPtrFactory in CommandBufferProxyImpl</a></td><td>Uzair Jaleel</td></tr>
 <tr><td>2017-08-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/584552'>Migrate MediaStream IPC messages to Mojo - part 4</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-07-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/589092'>Use FrameSelection::IsDirectional() in TextControlElement</a></td><td>tanvir.rizvi</td></tr>
