--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-08-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/612021'>Use media::AudioParameters directly in MediaStreamDevice - part 2</a></td><td>Chandan Padhi</td></tr>
+<tr><td>2017-08-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/590515'>Use media::AudioParameters directly in MediaStreamDevice - part 1</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-08-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/584648'>Create unit_tests target in //media/cdm.</a></td><td>Suchit Agrawal</td></tr>
 <tr><td>2017-08-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/572604'>PaymentRequest: Throw if updateWith() is not trusted.</a></td><td>Jinho Bang</td></tr>
 <tr><td>2017-08-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/600748'>PaymentHandler: Implement AbortPaymentEvent in content side.</a></td><td>Jinho Bang</td></tr>
