--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-08-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/612974'>Use SelectionForUndoStep in ApplyBlockElementCommand</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-08-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/611688'>Remove least significant variable imeAction from ImeUtils</a></td><td>AJITH KUMAR V</td></tr>
 <tr><td>2017-08-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/612021'>Use media::AudioParameters directly in MediaStreamDevice - part 2</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-08-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/590515'>Use media::AudioParameters directly in MediaStreamDevice - part 1</a></td><td>Chandan Padhi</td></tr>
