--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,11 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-08-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/618828'>Use SelectionForUndoStep in IndentOutdentCommand</a></td><td>tanvir.rizvi</td></tr>
+<tr><td>2017-08-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/618827'>Use SelectionForUndoStep in CreateLinkCommand</a></td><td>tanvir.rizvi</td></tr>
+<tr><td>2017-08-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/618435'>Use SelectionForUndoStep in BreakBlockquoteCommand</a></td><td>tanvir.rizvi</td></tr>
+<tr><td>2017-08-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/618211'>ApplyStyleCommand position should use SelectionForUndoStep</a></td><td>tanvir.rizvi</td></tr>
+<tr><td>2017-08-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/618213'>Use SelectionForUndoStep in ApplyStyleCommand</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-08-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/587691'>fixup! Dispel the myth that enclosingLayer can return zero</a></td><td>deejay</td></tr>
 <tr><td>2017-08-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/601647'>Remove unnecessary condition in CounterNode::InsertAfter</a></td><td>DongJun Kim</td></tr>
 <tr><td>2017-08-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/603574'>Rename SetSelectionData to SetSelectionOptions</a></td><td>Shanmuga Pandi M</td></tr>
