--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-08-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/618312'>Move MockMojoMediaStreamDispatcherHost class to its own files</a></td><td>Chandan Padhi</td></tr>
+<tr><td>2017-08-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/605867'>Remove MediaStreamMsgStart and its references</a></td><td>Chandan Padhi</td></tr>
+<tr><td>2017-08-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/604853'>Register mojom::MediaStreamDispatcherHost interface</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-08-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/618828'>Use SelectionForUndoStep in IndentOutdentCommand</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-08-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/618827'>Use SelectionForUndoStep in CreateLinkCommand</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-08-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/618435'>Use SelectionForUndoStep in BreakBlockquoteCommand</a></td><td>tanvir.rizvi</td></tr>
