--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-08-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/640771'>Add mojo connection error handler for MediaStreamDispatcher</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-08-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/631859'>Changing <style> element's media attribute should reflect is CSS.</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-08-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/631762'>Make SpellChecker not to use EndingVisibleSelection</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-08-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/638190'>Use SelectionForUndoStep in ApplyStyleCommand</a></td><td>tanvir.rizvi</td></tr>
