--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-09-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/650689'>Remove AddParsedProperty</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-09-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/647407'>Remove StreamDeviceInfo from MediaStreamManager and MediaStreamRequester</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-09-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/645907'>Remove StreamDeviceInfo from MediaStreamSource and its subclasses</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-09-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/626216'>Reduce usage of VisibleSelection in ReplaceSelectionCommand</a></td><td>tanvir.rizvi</td></tr>
