--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-09-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/647515'>[RLS]Create vertical scrollbar bydefault</a></td><td>srirama</td></tr>
+<tr><td>2017-09-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/654464'>Remove IsEqual() method from MediaStreamDevice</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-09-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/652406'>[geometry] Add a DOMMatrix2DInit dictionary type</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2017-09-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/646347'>Create unit_tests target in //media/muxers.</a></td><td>Suchit Agrawal</td></tr>
 <tr><td>2017-09-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/650074'>Remove StreamDeviceInfo and its remaining references</a></td><td>Chandan Padhi</td></tr>
