--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-09-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/657738'>Avoid unnecessary canonicalization in InsertListCommand</a></td><td>tanvir.rizvi</td></tr>
+<tr><td>2017-09-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/657739'>Make CompositeEditCommand::EndingVisibleSelection as protected</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-09-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/653300'>Remove ParseSingleValue member function</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-09-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/655017'>Rename media_stream_options.cc|h to media_stream_controls.cc|h</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-09-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/652727'>Measure the usage of image button form data with value attribute.</a></td><td>Shanmuga Pandi M</td></tr>
