--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-09-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/641171'>Use SelectionForUndoStep in DeleteSelectionCommand</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-09-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/652093'>PaymentHandler: Fix a crash when canMakePayment() is called.</a></td><td>Jinho Bang</td></tr>
 <tr><td>2017-09-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/657738'>Avoid unnecessary canonicalization in InsertListCommand</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-09-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/657739'>Make CompositeEditCommand::EndingVisibleSelection as protected</a></td><td>tanvir.rizvi</td></tr>
