--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-09-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/662087'>Updating attribute event handler should replace the existing attribute event listener</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2017-09-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/663820'>Support unset in CSSParserFastPaths</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-09-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/658201'>PaymentHandler: Refactor PaymentInstrumentIconFetcher class.</a></td><td>Jinho Bang</td></tr>
 <tr><td>2017-09-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/643346'>Use url::Origin in RenderFrameHostDelegate::CheckMediaAccessPermission</a></td><td>Chandan Padhi</td></tr>
