--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-09-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/665077'>Pass weak pointer to MediaStreamManager::DeviceRequest</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-09-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/666365'>Remove unused function ClearAttributeEventListener() from EventTarget.</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2017-09-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/645589'>Fixing build errors when enable_vulkan=true</a></td><td>swarali.sr</td></tr>
 <tr><td>2017-09-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/662087'>Updating attribute event handler should replace the existing attribute event listener</a></td><td>Bhagirathi Satpathy</td></tr>
