--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-09-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/666877'>Reorg core/editing directory</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-09-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/665558'>Changed width and height to unsigned long for HTMLCanvasElement</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-09-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/665077'>Pass weak pointer to MediaStreamManager::DeviceRequest</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-09-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/666365'>Remove unused function ClearAttributeEventListener() from EventTarget.</a></td><td>Bhagirathi Satpathy</td></tr>
